--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "yofukashi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^0.14.2"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.1.2",
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "run-sequence": "^1.1.4"
+  }
 }
