--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "node-twitter-api": "^1.6.1",
     "react": "^0.14.2"
   },
   "devDependencies": {
