--- a/.eslintrc
+++ b/.eslintrc
@@ -78,12 +78,12 @@
     "no-underscore-dangle": 2,
     "no-unneeded-ternary": 2,
     "no-unused-expressions": 2,
-    "no-unused-vars": [2, {"vars": "all", "args": "all"}],
+    "no-unused-vars": [2, {"vars": "all", "args": "all", "argsIgnorePattern": "^_"}],
     "no-use-before-define": 2,
     "no-void": 2,
     "no-with": 2,
 
-    "max-len": [1, 100, 2],
+    "max-len": [1, 120, 2],
     "max-params": [1, 3],
     "max-depth": [1, 3],
     "max-statements": [1, 50],
