--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.1.2",
     "coffee-script": "^1.10.0",
+    "del": "^2.1.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
     "run-sequence": "^1.1.4"
