--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "node-twitter-api": "^1.6.1",
-    "react": "^0.14.2"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.2",
