add scss building task

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "del": "^2.1.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
+    "gulp-sass": "^2.1.0",
     "run-sequence": "^1.1.4"
   }
 }
