--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "twitter": "^1.2.5"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.2",
+    "babel": "^6.1.18",
+    "babel-preset-es2015": "^6.1.8",
+    "babel-preset-react": "^6.1.18",
     "coffee-script": "^1.10.0",
     "del": "^2.1.0",
     "gulp": "^3.9.0",
