--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "events": "^1.1.0",
     "node-twitter-api": "^1.6.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
