--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "events": "^1.1.0",
     "immutable": "^3.7.5",
+    "moment": "^2.10.6",
     "node-twitter-api": "^1.6.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
