--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-twitter-api": "^1.6.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
