--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutable": "^3.7.5",
     "moment": "^2.10.6",
     "node-twitter-api": "^1.6.1",
+    "open": "0.0.5",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-modal": "^0.6.1",
