--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/browser/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "keywords": [],
   "author": "",
@@ -27,13 +28,13 @@
   },
   "devDependencies": {
     "babel": "^6.1.18",
+    "babel-core": "^6.2.1",
     "babel-preset-es2015": "^6.1.8",
     "babel-preset-react": "^6.1.18",
     "coffee-script": "^1.10.0",
     "del": "^2.1.0",
-    "gulp": "^3.9.0",
+    "gulp": "git://github.com/gulpjs/gulp.git#4.0",
     "gulp-babel": "^6.1.0",
-    "gulp-sass": "^2.1.0",
-    "run-sequence": "^1.1.4"
+    "gulp-sass": "^2.1.0"
   }
 }
